# magda-coreMingmingfork

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  HANDOFF-mixing-agent.md  HANDOFF-tempo-single-source.md  HANDOFF_TO_CODEX.md  Makefile  README.md  README_CN.md  build.bat  setup.sh  vcpkg.json  winbuild.sh
examples/: CMakeLists.txt  lua_smoke.cpp
magda/daw/: CMakeLists.txt  magda.cpp  magda_daw_main.cpp  scripting_app.hpp
magda/daw/api/: CMakeLists.txt  alias_api.hpp  alias_api_live.cpp  alias_api_live.hpp  automation_api.hpp  automation_api_live.cpp  automation_api_live.hpp  clip_api.hpp  clip_api_live.cpp  clip_api_live.hpp  focused_api.hpp  focused_api_live.cpp  focused_api_live.hpp  magda_api.hpp  magda_api_live.hpp  midi_api.hpp  midi_api_live.cpp  midi_api_live.hpp  project_api.hpp  project_api_live.cpp  project_api_live.hpp  selection_api.hpp  selection_api_live.cpp  selection_api_live.hpp  session_api.hpp  session_api_live.cpp  session_api_live.hpp  track_api.hpp  track_api_live.cpp  track_api_live.hpp  transport_api.hpp  transport_api_live.cpp  transport_api_live.hpp  undo_api.hpp  undo_api_live.cpp  undo_api_live.hpp
magda/daw/audio/: ArpeggiatorPlugin.cpp  AudioBridge.cpp  AudioBridge.hpp  AudioBridgeMixer.cpp  AudioBridgeMixer.hpp  AudioDriverUtils.hpp  AudioThumbnailManager.cpp  AudioThumbnailManager.hpp  AutomationPlaybackEngine.cpp  AutomationPlaybackEngine.hpp  AutomationRecordingEngine.cpp  AutomationRecordingEngine.hpp  CMakeLists.txt  CompService.cpp  CompService.hpp  ControllerFeedback.hpp  ControllerParamWriter.cpp  ControllerParamWriter.hpp  ControllerRouter.cpp  ControllerRouter.hpp  DeviceMeteringManager.cpp  DeviceMeteringManager.hpp  DeviceProcessor.cpp  DeviceProcessor.hpp  DrumGridPlugin.cpp  FaustResources.cpp  FaustResources.hpp  MagdaSamplerPlugin.cpp  MidiBridge.cpp  MidiBridge.hpp  MidiDeviceMatch.cpp  MidiLearnSession.hpp  ModifierHelpers.hpp  ModifierSync.cpp  ModifierSync.hpp  PluginManager.cpp  PluginManager.hpp  QwertyMidiKeyboard.cpp  QwertyMidiKeyboard.hpp  RackSyncManager.cpp  (+10 more)
magda/daw/core/: AppPaths.cpp  AppPaths.hpp  AudioClipSourceDisplay.hpp  AutomationCommands.cpp  AutomationCommands.hpp  AutomationInfo.cpp  AutomationInfo.hpp  AutomationManager.cpp  AutomationManager.hpp  AutomationTypes.hpp  CMakeLists.txt  ChainFingerprint.hpp  ChainNode.hpp  ChainNodePath.hpp  ChainRoutingModel.hpp  ChordProgressionContext.hpp  ChordProgressionConverter.cpp  ChordProgressionConverter.hpp  ClipBatchEdit.hpp  ClipCommands.cpp  ClipCommands.hpp  ClipDisplayInfo.hpp  ClipInfo.hpp  ClipManager.cpp  ClipManager.hpp  ClipOperations.hpp  ClipPropertyCommands.hpp  ClipTypes.hpp  CompSectionMath.hpp  Config.cpp  Config.hpp  ConsoleRouting.cpp  ConsoleRouting.hpp  ControlTarget.hpp  CurveMath.hpp  DeviceInfo.hpp  DrumkitManager.cpp  DrumkitManager.hpp  GainStagingManager.cpp  GainStagingManager.hpp  (+61 more)
magda/daw/engine/: AudioEngine.hpp  CMakeLists.txt  MagdaEngineBehaviour.hpp  MagdaUIBehaviour.cpp  MagdaUIBehaviour.hpp  PlaybackPositionTimer.cpp  PlaybackPositionTimer.hpp  PluginScanCoordinator.cpp  PluginScanner.cpp  TempoLaneBridge.cpp  TempoLaneBridge.hpp  TempoLaneSync.cpp  TempoLaneSync.hpp  TracktionEngineWrapper.cpp  TracktionEngineWrapper.hpp  TracktionEngineWrapperClips.cpp  TracktionEngineWrapperDevices.cpp  TracktionEngineWrapperInit.cpp  TracktionEngineWrapperPlugins.cpp  TracktionEngineWrapperRecording.cpp  TracktionEngineWrapperTracks.cpp  TracktionEngineWrapperTransport.cpp  TracktionTempoMap.hpp
magda/daw/interfaces/: CMakeLists.txt
magda/daw/media_db/: AudioFeatures.cpp  AudioFeatures.hpp  CMakeLists.txt  ClapAudioEncoder.cpp  ClapAudioEncoder.hpp  ClapTextEncoder.cpp  ClapTextEncoder.hpp  MediaDatabase.cpp  MediaDatabase.hpp  MediaDbContext.cpp  MediaDbContext.hpp  MediaDbIndexer.cpp  MediaDbIndexer.hpp  MediaDbMetadata.cpp  MediaDbMetadata.hpp  MediaDbQuery.cpp  MediaDbQuery.hpp  MediaDbZeroShotTags.cpp  MediaDbZeroShotTags.hpp  MelSpectrogram.cpp  MelSpectrogram.hpp  PathRules.cpp  PathRules.hpp  PresetDbIndexer.cpp  PresetDbIndexer.hpp  RobertaTokenizer.cpp  RobertaTokenizer.hpp  SampleTaggerDownloader.cpp  SampleTaggerDownloader.hpp  Scan.cpp  Scan.hpp  Schema.hpp
magda/daw/music/: CMakeLists.txt  NotationSettings.hpp
magda/daw/profiling/: CMakeLists.txt
magda/daw/project/: CMakeLists.txt  MediaCollector.cpp  MediaCollector.hpp  ProjectInfo.hpp  ProjectManager.cpp  ProjectManager.hpp
magda/daw/transcription/: BasicPitchPostprocess.cpp  BasicPitchPostprocess.hpp  BasicPitchTranscriber.cpp  BasicPitchTranscriber.hpp  CMakeLists.txt  Transcriber.hpp  (+2 more)
magda/scripting/: CMakeLists.txt  LuaController.cpp  LuaController.hpp  LuaRuntime.cpp  LuaRuntime.hpp  LuaSandbox.cpp  LuaSandbox.hpp  LuaScriptStore.cpp  LuaScriptStore.hpp  MagdaApiLuaBindings.cpp  MagdaApiLuaBindings.hpp
prototypes/media_db/: .gitignore  README.md  pyproject.toml
tests/: CMakeLists.txt  JuceTestStateGuard.hpp  MockMagdaApi.hpp  SharedTestEngine.hpp  juce_tests_main.cpp  test_alias_auto_gen.cpp  test_alias_parser.cpp  test_alias_registry.cpp  test_alias_resolver.cpp  test_app_paths.cpp  test_arrange_beat_native_juce.cpp  test_arrangement_transport_loop_juce.cpp  test_audio_bridge.cpp  test_audio_clip_stretch.cpp  test_audio_driver_type_selection_juce.cpp  test_audio_source_length.cpp  test_audio_to_midi.cpp  test_auto_tempo.cpp  test_automation_agent.cpp  test_automation_alias_targets.cpp  test_automation_curve_simplifier.cpp  test_automation_modes.cpp  test_automation_modes_juce.cpp  test_automation_singleton.cpp  test_band_spectrum.cpp  test_binding_registry.cpp  test_binding_transform.cpp  test_chain_fingerprint.cpp  test_chain_routing_model.cpp  test_chord_progression_converter_juce.cpp  test_clip_batch_edit.cpp  test_clip_bpm_invariant.cpp  test_clip_commands.cpp  test_clip_inspector_juce.cpp  test_clip_resize_operations.cpp  test_clip_sync_integration_juce.cpp  test_compact_executor_context.cpp  test_console_routing.cpp  test_control_target.cpp  test_controller_profile.cpp  (+88 more)
(+1031 files in other folders)
